Made slider responsive. Made array code consistent. Added Elementor controls for text background colour. Added dom ready jquery to load the image.

--- a/assets/css/flickitystyle.css
+++ b/assets/css/flickitystyle.css
@@ -1,10 +1,16 @@
 /* CSS for this widget */
 
+.carousel-card
+{
+	width: 100%;
+	height: auto;
+}
+
 .text-wrapper
 {
 	position: absolute;
     top: 30%;
-    background: rgba(55,55,55,0.5);
+    /*background: rgba(55,55,55,0.5);*/
     padding: 0 10px 25px 11px;
     margin: 0px 10px;
     left: 0;
